modified:   ChatApp-Backend/src/main/java/com/ChatApp/Config/RestExceptionHandler.java 	modified:   ChatApp-Backend/src/main/java/com/ChatApp/Config/UserAuthenticationProvider.java 	modified:   ChatApp-Backend/src/main/java/com/ChatApp/Controllers/AuthController.java 	modified:   ChatApp-Backend/src/main/java/com/ChatApp/Controllers/MessageController.java 	modified:   ChatApp-Backend/src/main/java/com/ChatApp/Conversation/ConversationDto.java 	modified:   ChatApp-Backend/src/main/java/com/ChatApp/WebSocket/WebSocketConfig.java 	new file:   ChatApp-Backend/src/main/java/com/ChatApp/WebSocket/WebSocketInterceptor.java 	modified:   ChatApp-Frontend/src/app/app-routing.module.ts 	modified:   ChatApp-Frontend/src/app/app.module.ts 	modified:   ChatApp-Frontend/src/app/chats-scrollbar/chats.component.html 	modified:   ChatApp-Frontend/src/app/chats-scrollbar/chats.component.ts 	modified:   ChatApp-Frontend/src/app/conversation/conversation.component.html 	modified:   ChatApp-Frontend/src/app/conversation/conversation.component.ts 	new file:   ChatApp-Frontend/src/app/create-group/create-group.component.css 	new file:   ChatApp-Frontend/src/app/create-group/create-group.component.html 	new file:   ChatApp-Frontend/src/app/create-group/create-group.component.spec.ts 	new file:   ChatApp-Frontend/src/app/create-group/create-group.component.ts 	new file:   ChatApp-Frontend/src/app/custom-pipes/limit-string.pipe.spec.ts 	new file:   ChatApp-Frontend/src/app/custom-pipes/limit-string.pipe.ts 	modified:   ChatApp-Frontend/src/app/http-interceptor.interceptor.ts 	modified:   ChatApp-Frontend/src/app/login/login.component.css 	modified:   ChatApp-Frontend/src/app/login/login.component.html 	modified:   ChatApp-Frontend/src/app/login/login.component.ts 	modified:   ChatApp-Frontend/src/app/search-bar/search-bar.component.css 	modified:   ChatApp-Frontend/src/app/search-bar/search-bar.component.ts 	modified:   ChatApp-Frontend/src/app/service/conversation.service.ts 	modified:   Cha